syntax = "proto3";

option csharp_namespace = "DiscordEye.ProxyDistributor";

package proxyDistributor;

message TakenProxy {
  int32 id = 1;
  string address = 2;
  string port = 3;
  string login = 4;
  string password = 5;  
  string release_key = 6;
}

message ProxyGrpc {
  int32 id = 1;
  string address = 2;
  string port = 3;
  string login = 4;
  string password = 5;
  string taker_address = 6;
  bool is_free = 7;
}

message TakeProxyRequest {
}

message TakeProxyResponse {
  oneof result {
    TakenProxy proxy = 1;
    string error_message = 2;
  }
}

message ReleaseProxyRequest {
  int32 proxy_id = 1;
  string release_key = 2;
}

message ReleaseProxyResponse {
  bool operation_successful = 1;
  string error_message = 2;
}

message GetProxiesRequest {
}

message GetProxiesResponse {
  repeated ProxyGrpc proxies = 1;
}

service ProxyDistributorService {
  rpc GetProxies (GetProxiesRequest) returns (GetProxiesResponse);
  rpc TakeProxy (TakeProxyRequest) returns (TakeProxyResponse);
  rpc ReleaseProxy (ReleaseProxyRequest) returns (ReleaseProxyResponse);
}