syntax = "proto3";

option csharp_namespace = "DiscordEye";

message ProxyHeartbeatRequest {
}

message ProxyHeartbeatResponse {
  string release_key = 1;
}

service ProxyHeartbeatGrpcService {
  rpc Heartbeat(ProxyHeartbeatRequest) returns (ProxyHeartbeatResponse) {}
}